Add a few missing OAS blocks
And correct a few others
